[tool.poetry]
name = "sandbox"
version = "0.1.0"
description = ""
authors = ["tMinamiii <otherthan.new@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.7"
jupyterlab = "^2.2.10"

[tool.poetry.dev-dependencies]
black = "^19.10b0"
flake8-bugbear = "^20.1.4"
flake8 = "^3.7.9"
ipython = "^7.12.0"
isort = "^4.3.21"
jupyter = "^1.0.0"
mypy = "^0.761"
neovim = "^0.3.1"
pre-commit = "^2.0.1"
pydocstyle = "^5.0.2"
pynvim = "^0.4.1"
pytest = "^5.3.5"

[tool.black]
line-length = 119
target-version = ['py36', 'py37', 'py38']
include = '\.pyi?$'
exclude = '''
/(
    \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
  # The following are specific to Black, you probably don't want those.
  | blib2to3
  | tests/data
  | profiling
)/
'''
[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"

